# dealve-tui

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: pull_request_template.md
.github/workflows/: push_main.yml  release_cargo.yml
api/: Cargo.toml
api/examples/: test_connection.rs
api/src/: client.rs  endpoints.rs  lib.rs  types.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs  models.rs
tui/: Cargo.toml
tui/src/: app.rs  config.rs  events.rs  main.rs  message.rs  model.rs  onboarding.rs  tasks.rs  ui.rs  update.rs
tui/src/view/: deals_list.rs  game_details.rs  mod.rs  popups.rs  price_chart.rs  styles.rs
