[workspace]
members = ["core", "api", "tui"]
resolver = "2"

[workspace.package]
version = "1.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["kurama"]
repository = "https://github.com/kurama/dealve-tui"
keywords = ["games", "deals", "tui", "terminal", "isthereanydeal"]
categories = ["command-line-utilities"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
