[package]
name = "dealve-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dealve-core = { path = "../core" }
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
