[package]
name = "dealve-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "IsThereAnyDeal API client for Dealve"

[dependencies]
dealve-core = { path = "../core", version = "1.0.1" }
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
chrono = "0.4"

[dev-dependencies]
dotenvy = "0.15"
